# multi-agents-design-patterns

./: .gitignore  README.md  main.py  pyproject.toml
adk-google-patterns/coordinator-dispatcher/: .env.example  agent.py  tools.py
adk-google-patterns/parallel-fan-out/: .env.example  agent.py
adk-google-patterns/sequential-pipeline/: agent.py  env.examples
crew-patterns/coordinator-dispatcher/: .env.examples  README.md  pyproject.toml
crew-patterns/coordinator-dispatcher/src/coordinator_dispatcher/: main.py
crew-patterns/coordinator-dispatcher/src/coordinator_dispatcher/crews/billing_crew/: billing_crew.py
crew-patterns/coordinator-dispatcher/src/coordinator_dispatcher/crews/billing_crew/config/: agents.yaml  tasks.yaml
crew-patterns/coordinator-dispatcher/src/coordinator_dispatcher/crews/tech_support_crew/: tech_support_crew.py
crew-patterns/coordinator-dispatcher/src/coordinator_dispatcher/crews/tech_support_crew/config/: agents.yaml  tasks.yaml
crew-patterns/coordinator-dispatcher/src/coordinator_dispatcher/tools/: tools.py
crew-patterns/parallel-fan-out/: .env.example  README.md  pyproject.toml
crew-patterns/parallel-fan-out/src/parallel_fan_out/: crew.py  main.py
crew-patterns/parallel-fan-out/src/parallel_fan_out/config/: agents.yaml  tasks.yaml
crew-patterns/parallel-fan-out/src/parallel_fan_out/tools/: tools.py
crew-patterns/sequential_pipeline/: .env.example  README.md  pyproject.toml
crew-patterns/sequential_pipeline/src/sequential_pipeline/: crew.py  main.py
crew-patterns/sequential_pipeline/src/sequential_pipeline/config/: agents.yaml  tasks.yaml
crew-patterns/sequential_pipeline/src/sequential_pipeline/tools/: tools.py
docs/: The Main frameworks for building AI agents.md
lang-patterns/coordinator-dispatcher/: .env.example  agent.py
lang-patterns/sequential-pipeline/: agent.py  tools.py
