[project]
name = "sequential_pipeline"
version = "0.1.0"
description = "sequential-pipeline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.8.0",
]

[project.scripts]
sequential_pipeline = "sequential_pipeline.main:run"
run_crew = "sequential_pipeline.main:run"
train = "sequential_pipeline.main:train"
replay = "sequential_pipeline.main:replay"
test = "sequential_pipeline.main:test"
run_with_trigger = "sequential_pipeline.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sequential_pipeline"]

[tool.hatch.build.targets.sdist]
include = ["src/sequential_pipeline/**"]

[tool.crewai]
type = "crew"
